<?xml version="1.0"?>
<package format="2">
    <name>st_r17_calibration</name>
    <version>0.0.0</version>
    <description>Package related to DH parameter calibration and optimization for a generic robot arm.</description>
    <author email="jchocholate@gmail.com">Yoonyoung Cho</author>
    <maintainer email="jchocholate@gmail.com">Yoonyoung Cho</maintainer>
    <license>MIT</license>
    <url type="repository">https://github.com/yycho0108/st_r17_ros_driver</url>

    <!-- The *depend tags are used to specify dependencies -->
    <!-- Dependencies can be catkin packages or system dependencies -->
    <!-- Examples: -->
    <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
    <!--   <depend>roscpp</depend> -->
    <!--   Note that this is equivalent to the following: -->
    <!--   <build_depend>roscpp</build_depend> -->
    <!--   <exec_depend>roscpp</exec_depend> -->
    <!-- Use build_depend for packages you need at compile time: -->
    <!--   <build_depend>message_generation</build_depend> -->
    <!-- Use build_export_depend for packages you need in order to build against this package: -->
    <!--   <build_export_depend>message_generation</build_export_depend> -->
    <!-- Use buildtool_depend for build tool packages: -->
    <!--   <buildtool_depend>catkin</buildtool_depend> -->
    <!-- Use exec_depend for packages you need at runtime: -->
    <!--   <exec_depend>message_runtime</exec_depend> -->
    <!-- Use test_depend for packages you need only for testing: -->
    <!--   <test_depend>gtest</test_depend> -->
    <!-- Use doc_depend for packages you need only for building documentation: -->
    <!--   <doc_depend>doxygen</doc_depend> -->
    <buildtool_depend>catkin</buildtool_depend>

    <depend>rospy</depend>
    <depend>roscpp</depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>

    <build_depend>apriltags2_ros</build_depend>
    <build_depend>gazebo_ros</build_depend>
    <build_depend>message_generation</build_depend>

    <build_export_depend>apriltags2_ros</build_export_depend>
    <build_export_depend>gazebo_ros</build_export_depend>

    <exec_depend>apriltags2_ros</exec_depend>
    <exec_depend>gazebo_ros</exec_depend>

    <!-- MoveIt -->
    <exec_depend>moveit_planners_ompl</exec_depend>
    <exec_depend>moveit_kinematics</exec_depend>
    <exec_depend>moveit_ros_visualization</exec_depend>
    <exec_depend>message_runtime</exec_depend>

    <depend>moveit_ros_move_group</depend>
    <depend>moveit_ros_planning</depend>
    <depend>moveit_ros_planning_interface</depend>
    <depend>moveit_visual_tools</depend>
    <depend>moveit_core</depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!--
      <gazebo_ros gazebo_model_path="${prefix}/models"/>
      <gazebo_ros gazebo_media_path="${prefix}"/>       
      <rviz rviz_media_path="${prefix}/Media/materials/scripts:${prefix}/Media/materials/textures"/>       
      -->
  </export>

</package>
