<?xml version="1.0"?>
<package>
    <name>st_r17_description</name>
    <version>0.0.0</version>
    <description>Standard Description package containing URDF and related data.</description>

    <author email="jchocholate@gmail.com">Yoonyoung Cho</author>
    <maintainer email="jchocholate@gmail.com">Yoonyoung Cho</maintainer>
    <license>MIT</license>
    <url type="repository">https://github.com/yycho0108/st_r17_ros_driver</url>

    <!-- The *_depend tags are used to specify dependencies -->
    <!-- Dependencies can be catkin packages or system dependencies -->
    <!-- Examples: -->
    <!-- Use build_depend for packages you need at compile time: -->
    <!--   <build_depend>message_generation</build_depend> -->
    <!-- Use buildtool_depend for build tool packages: -->
    <!--   <buildtool_depend>catkin</buildtool_depend> -->
    <!-- Use run_depend for packages you need at runtime: -->
    <!--   <run_depend>message_runtime</run_depend> -->
    <!-- Use test_depend for packages you need only for testing: -->
    <!--   <test_depend>gtest</test_depend> -->
    <buildtool_depend>catkin</buildtool_depend>

    <run_depend>joint_state_publisher</run_depend>
    <run_depend>robot_state_publisher</run_depend>
    <run_depend>rviz</run_depend>
    <run_depend>gazebo_ros</run_depend>
    <run_depend>rostopic</run_depend>


    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->

    </export>
</package>
