<?xml version='1.0' encoding='UTF-8'?>
<package format="2">
    <name>st_r17_ikfast_plugin</name>
    <version>0.0.0</version>
    <description>Inverse Kinematics plugin for using the ST-R17 Robot Arm with MoveIt.</description>

    <author email="jchocholate@gmail.com">Yoonyoung Cho</author>
    <maintainer email="jchocholate@gmail.com">Yoonyoung Cho</maintainer>
    <license>MIT</license>
    <url type="repository">https://github.com/yycho0108/st_r17_ros_driver</url>

    <!-- The *depend tags are used to specify dependencies -->
    <!-- Dependencies can be catkin packages or system dependencies -->
    <!-- Examples: -->
    <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
    <!--   <depend>roscpp</depend> -->
    <!--   Note that this is equivalent to the following: -->
    <!--   <build_depend>roscpp</build_depend> -->
    <!--   <exec_depend>roscpp</exec_depend> -->
    <!-- Use build_depend for packages you need at compile time: -->
    <!--   <build_depend>message_generation</build_depend> -->
    <!-- Use build_export_depend for packages you need in order to build against this package: -->
    <!--   <build_export_depend>message_generation</build_export_depend> -->
    <!-- Use buildtool_depend for build tool packages: -->
    <!--   <buildtool_depend>catkin</buildtool_depend> -->
    <!-- Use exec_depend for packages you need at runtime: -->
    <!--   <exec_depend>message_runtime</exec_depend> -->
    <!-- Use test_depend for packages you need only for testing: -->
    <!--   <test_depend>gtest</test_depend> -->
    <!-- Use doc_depend for packages you need only for building documentation: -->
    <!--   <doc_depend>doxygen</doc_depend> -->
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>moveit_core</build_depend>
    <build_depend>roscpp</build_depend>
    <build_export_depend>moveit_core</build_export_depend>
    <build_export_depend>roscpp</build_export_depend>
    <build_depend>pluginlib</build_depend>
    <exec_depend>moveit_core</exec_depend>
    <!--<exec_depend>moveit_ikfast</exec_depend>-->
    <exec_depend>roscpp</exec_depend>
    <exec_depend>pluginlib</exec_depend>
    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <moveit_core plugin="${prefix}/st_r17_arm_group_moveit_ikfast_plugin_description.xml"/>
    </export>
    <build_depend>liblapack-dev</build_depend>
    <build_depend>tf_conversions</build_depend>
    <exec_depend>liblapack-dev</exec_depend>
    <exec_depend>tf_conversions</exec_depend>
</package>
