<?xml version="1.0"?>
<package format="2">
    <name>st_r17_ros_driver</name>
    <version>0.0.0</version>
    <description>Metapackage for st_r17_ros_driver project.</description>

    <author email="jchocholate@gmail.com">Yoonyoung Cho</author>
    <maintainer email="jchocholate@gmail.com">Yoonyoung Cho</maintainer>
    <license>MIT</license>
    <url type="repository">https://github.com/yycho0108/st_r17_ros_driver</url>

    <!-- The *depend tags are used to specify dependencies -->
    <!-- Dependencies can be catkin packages or system dependencies -->
    <!-- Examples: -->
    <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
    <!--   <depend>roscpp</depend> -->
    <!--   Note that this is equivalent to the following: -->
    <!--   <build_depend>roscpp</build_depend> -->
    <!--   <exec_depend>roscpp</exec_depend> -->
    <!-- Use build_depend for packages you need at compile time: -->
    <!--   <build_depend>message_generation</build_depend> -->
    <!-- Use build_export_depend for packages you need in order to build against this package: -->
    <!--   <build_export_depend>message_generation</build_export_depend> -->
    <!-- Use buildtool_depend for build tool packages: -->
    <!--   <buildtool_depend>catkin</buildtool_depend> -->
    <!-- Use exec_depend for packages you need at runtime: -->
    <!--   <exec_depend>message_runtime</exec_depend> -->
    <!-- Use test_depend for packages you need only for testing: -->
    <!--   <test_depend>gtest</test_depend> -->
    <!-- Use doc_depend for packages you need only for building documentation: -->
    <!--   <doc_depend>doxygen</doc_depend> -->
    <buildtool_depend>catkin</buildtool_depend>

    <exec_depend>st_r17_description</exec_depend>
    <exec_depend>st_r17_moveit_config</exec_depend>
    <exec_depend>st_r17_ikfast_plugin</exec_depend>


    <!-- The export tag contains other, unspecified, tags -->
    <!-- Other tools can request additional information be placed here -->
    <export>
        <metapackage/>
    </export>
</package>
